48
================

16/02/24 Verify signature data-uri is valid and contains at least a line #1438
16/02/24 Autoprocess: attach animal/create person no longer adds media to animal #1437
16/02/24 Option to attach form to animals without media #1437
16/02/24 Create->Animal (non-shelter with owner) form option #1131
12/02/24 Waiting list: option to set default removal in weeks #1416
12/02/24 Show a thumbnail in the animal chooser dialog
10/02/24 Fix clone_from_template overriding auto not for adoption option
09/02/24 Support for backup S3 provider #1423
08/02/24 "remember me" token with 2FA causing redirect loop #1433
08/02/24 Fix clone_from_template removing holds
07/02/24 Fix clone_from_template being broken on non-postgres databases
05/02/24 Add unified check-a-chip dialog with read-through cache #1430
02/02/24 Add coordinator person additional field type (Saggi Neuemann) #1428
02/02/24 Animal templates: Do not copy nonshelter in additionalflags
02/02/24 DocumentImgThumbLink/Src using web instead of doc preferred
02/02/24 Show a different message on login for IP failure
01/02/24 Refactor chip checking to backend service, support petaddress.com.au
31/01/24 Option to hide microchip supplier #1427
31/01/24 Move chip prefix database out of code to a shared file #1427
31/01/24 Use <<PersonDocumentImg*>> tokens to avoid collisions #1426
30/01/24 SavourLife/PetRescue: fix bug with null additional fields
29/01/24 Do not allow reply to override FROM on form notifications #1418
29/01/24 Global/default BCC option #1304
29/01/24 Allow user to default their email as from/reply #1424
29/01/24 Put use of "reply as from" on an option #1418
28/01/24 Fix bulk email bug caused by tag refactoring/param change #1422
26/01/24 Fix add animal/entry category setting type when visible #1378
25/01/24 Fix for OpenOffice tags appearing in token content #1422
25/01/24 Fix bug where deposit account could remain hidden in payment book