@@ -1,6 +1,7 @@
 48
 ================
 
+20/02/24 SavourLife: Set good with other animals if cats+dogs=YES
 16/02/24 Verify signature data-uri is valid and contains at least a line #1438
 16/02/24 Autoprocess: attach animal/create person no longer adds media to animal #1437
 16/02/24 Option to attach form to animals without media #1437
